--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -99,6 +99,8 @@ fr:
       copy_username: Copier le nom d'utilisateur
       add_attachment: Ajouter un attachement
       load_more: Charger plus
+      date_time: Date/Temps
+      action: Action
     new:
       title: Nouveau compte
     log:
