--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -30,7 +30,7 @@ en:
   contribute_on_github: Contribute on GitHub
   settings: Settings
   users: Users
-  user: User
+
   profile_title: Profile
   last_login_date_and_from: "The last login was on %{last_login_at} from %{last_login_from}"
   last_login_date_and_from_country: "The last login was on %{last_login_at} from %{last_login_from} (%{last_login_country})"
@@ -64,8 +64,6 @@ en:
     title: Credentials
     index_menu:
       create: Create Credentials
-    show_menu:
-      add_attachment: Add Attachment
     edit:
       title: Edit Credentials
       random_password: Random password
@@ -79,7 +77,7 @@ en:
         good: Good
         strong: Strong
     show:
-      encryptable: Credentials
+      title: Credentials
       created_at: "Created at"
       last_update: "Last Update at"
       attachments: Attachments
@@ -260,6 +258,10 @@ en:
         success: Successfully changed password.
         new_passwords_not_equal: New passwords not equal
 
+    user-humen:
+      created: Successfully created a new user.
+      updated: User was successfully updated.
+
     encryptables: &encryptables_translations
       created: Credentials were successfully created.
       updated: Credentials were successfully updated.
@@ -327,7 +329,7 @@ en:
         newPassword2: "Confirm new password:"
         wrongPassword: Wrong password
       encryptable:
-        encryptable_name: Accountname
+        accountname: Accountname
       team:
         name: Name
         description: Description
