--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -30,7 +30,6 @@ fr:
   contribute_on_github: Contribuez sur GitHub
   settings: Paramètres
   users: Utilisateur
-  user: Utilisateur
   profile_title: Profilé
   last_login_date_and_from: "La dernière connexion était le %{last_login_at} de %{last_login_from}"
   last_login_date_and_from_country: "La dernière connexion était le %{last_login_at} de %{last_login_from} (%{last_login_country})"
@@ -61,7 +60,7 @@ fr:
         favourites: Appuyez pour rechercher dans les équipes favorites...
         all: Appuyez pour rechercher dans tout les équipes...
 
-  encryptables:
+  encryptable/credential:
     title: Comptes
     index_menu:
       create: Créer compte
@@ -80,7 +79,7 @@ fr:
         good: Bien
         strong: Fort
     show:
-      encryptable: Compte
+      title: Compte
       created_at: "Créé à"
       last_update: "Dernie changement à"
       attachments: Attachements
@@ -262,6 +261,10 @@ fr:
         success: Le mot de passe a été modifié avec succès.
         new_passwords_not_equal: Nouveaux mots de passe n'est pas égal.
 
+    user-humen:
+      created: Un nouvel utilisateur a été créé avec succès.
+      updated: L'utilisateur a été mis à jour avec succès.
+
     encryptables: &encryptables_translations
       created: Compte créé avec succès.
       updated: Compte modifiée avec succès.
@@ -278,7 +281,7 @@ fr:
 
     application:
       wait: S'il vous plaît attendre jusqu'à ce vos mots de passe a ètè nouveau cryptées.
-    file_entries:
+    encryptable/file_entries:
       uploaded: Fichier téléchargé avec succès.
       uploaded_size_to_high: Fichier est trop volumineux pour tèlècharger. (max. 10MB)
       uploaded_filename_is_empty: Le fichier n'a pas été nommé
@@ -329,7 +332,7 @@ fr:
         newPassword2: "Confirmer le nouveau mot de passe:"
         wrongPassword: Mauvais mot de passe
       encryptable:
-        encryptable_name: Nom du compte
+        accountname: Nom du compte
       team:
         name: Nom
         description: Description
