--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -196,7 +196,7 @@ de:
       delete: Ordner löschen
       edit: Ordner bearbeiten
 
-  file_entries:
+  encryptable_files:
     new:
       title: Anhang zum Account hinzufügen
       upload_file: Datei hochladen
@@ -396,7 +396,7 @@ de:
       created: Die neue Gruppe wurde erfolgreich erstellt.
       updated: Die Gruppe wurde erfolgreich bearbeitet.
       deleted: Die Gruppe wurde erfolgreich gelöscht.
-    file_entries:
+    encryptable_files:
       uploaded: Die Datei wurde erfolgreich hochgeladen.
       deleted: Die Datei wurde erfolgreich gelöscht.
       uploaded_size_to_high: Die Datei ist zu gross zum hochladen. (Max. 10MB)
@@ -439,7 +439,7 @@ de:
         submit: Erstellen
       account:
         account: Account
-        account_name: Accountname
+        name: Accountname
         username: Benutzername
         password: Passwort
         description: Beschreibung
