--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -328,7 +328,7 @@ de:
         newPassword1: "Neues Passwort:"
         newPassword2: "Neues Passwort bestätigen:"
         wrongPassword: Falsches Passwort
-      encryptable:
+      encryptable/credential:
         accountname: Accountname
       team:
         name: Name
