--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -327,7 +327,7 @@ en:
         newPassword1: "Enter new password:"
         newPassword2: "Confirm new password:"
         wrongPassword: Wrong password
-      encryptable:
+      encryptable/credential:
         accountname: Accountname
       team:
         name: Name
